--- a/PlanIt/Views/MainWindow.axaml
+++ b/PlanIt/Views/MainWindow.axaml
@@ -119,14 +119,15 @@
                                     <ListBox x:Name="CategoryListBox" Grid.Row="1" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled" SelectedItem="{Binding WindowVM.WorkingCategory}" ItemsSource="{Binding ViewRepository.CategoriesCollection}">
                                         <ListBox.ItemTemplate>
                                             <DataTemplate DataType="models:Category">
-                                                <Grid ColumnDefinitions="Auto, *, Auto, Auto" HorizontalAlignment="Stretch" VerticalAlignment="Center" ColumnSpacing="5">
+                                                <Grid ColumnDefinitions="Auto, *, Auto, Auto, Auto" HorizontalAlignment="Stretch" VerticalAlignment="Center" ColumnSpacing="5">
                                                     <Grid HorizontalAlignment="Left" VerticalAlignment="Center">
                                                         <Ellipse Width="26" Height="26" HorizontalAlignment="Center" VerticalAlignment="Center" Fill="{Binding Color, Converter={StaticResource ResourceLookupConverter}}"></Ellipse>
                                                         <PathIcon Width="10" Height="10" HorizontalAlignment="Center" VerticalAlignment="Center" Data="{Binding Icon, Converter={StaticResource ResourceLookupConverter}}" Foreground="{DynamicResource Text}"></PathIcon>
                                                     </Grid>
                                                     <TextBlock Grid.Column="1" Classes="t-16 t-r" VerticalAlignment="Center" TextWrapping="Wrap" Text="{Binding Title}"></TextBlock>
                                                     <TextBlock Grid.Column="2" Classes="t-18 t-b" HorizontalAlignment="Right" VerticalAlignment="Center" Text="{Binding TasksCount}"></TextBlock>
-                                                    <Button Width="14" Height="14" Grid.Column="3" VerticalAlignment="Center" HorizontalAlignment="Right" Classes="taskBtn" Command="{Binding Path=DataContext.WindowVM.RemoveCategory, ElementName=MainWindowLayout}" CommandParameter="{Binding }" IsVisible="{Binding $parent[ListBoxItem].IsPointerOver}"><PathIcon Width="12" Height="12" Data="{StaticResource TrashIcon}" Foreground="{DynamicResource TaskTrash}"></PathIcon></Button>
+                                                    <Button Width="14" Height="14" Grid.Column="3" VerticalAlignment="Center" HorizontalAlignment="Right" Classes="taskBtn" Command="{Binding Path=DataContext.WindowVM.EditCategory, ElementName=MainWindowLayout}" CommandParameter="{Binding }" IsVisible="{Binding $parent[ListBoxItem].IsPointerOver}"><PathIcon Width="12" Height="12" Data="{StaticResource EditIcon}" Foreground="{DynamicResource TaskSecondaryText}"></PathIcon></Button>
+                                                    <Button Width="14" Height="14" Grid.Column="4" VerticalAlignment="Center" HorizontalAlignment="Right" Classes="taskBtn" Command="{Binding Path=DataContext.WindowVM.RemoveCategory, ElementName=MainWindowLayout}" CommandParameter="{Binding }" IsVisible="{Binding $parent[ListBoxItem].IsPointerOver}"><PathIcon Width="12" Height="12" Data="{StaticResource TrashIcon}" Foreground="{DynamicResource TaskTrash}"></PathIcon></Button>
                                                 </Grid>
                                             </DataTemplate>
                                         </ListBox.ItemTemplate>
@@ -146,16 +147,16 @@
                     
                     <Border Padding="8" HorizontalAlignment="Stretch">
                         <Grid>
-                            <TextBlock Text="Choose the category to show" IsVisible="{Binding !WindowVM.PanelVisible}" Classes="t-sb t-20" Foreground="{DynamicResource TaskSecondaryText}"></TextBlock>
-                            <Border Padding="6" x:Name="Panel" VerticalAlignment="Center" HorizontalAlignment="Center" IsVisible="{Binding WindowVM.PanelVisible}">
+                            <TextBlock Text="Choose the category to show" IsVisible="{Binding !ViewRepository.Panel.Visible}" Classes="t-sb t-20" Foreground="{DynamicResource TaskSecondaryText}"></TextBlock>
+                            <Border Padding="6" x:Name="Panel" VerticalAlignment="Center" HorizontalAlignment="Center" IsVisible="{Binding ViewRepository.Panel.Visible}">
                                 <StackPanel Orientation="Horizontal" Spacing="7" VerticalAlignment="Center">
                                     <Grid VerticalAlignment="Center">
-                                        <Ellipse Width="30" Height="30" Fill="{Binding WindowVM.PanelColor, Converter={StaticResource ResourceLookupConverter}}"></Ellipse>
-                                        <PathIcon Width="14" Height="14" Data="{Binding WindowVM.PanelIcon, Converter={StaticResource ResourceLookupConverter}}" Foreground="{DynamicResource Text}"></PathIcon>
+                                        <Ellipse Width="30" Height="30" Fill="{Binding ViewRepository.Panel.Color, Converter={StaticResource ResourceLookupConverter}}"></Ellipse>
+                                        <PathIcon Width="14" Height="14" Data="{Binding ViewRepository.Panel.Icon, Converter={StaticResource ResourceLookupConverter}}" Foreground="{DynamicResource Text}"></PathIcon>
                                     </Grid>
-                                    <TextBlock Classes="t-m t-20" VerticalAlignment="Center" Text="{Binding WindowVM.PanelText}"></TextBlock>
-                                    <Rectangle Width="1" VerticalAlignment="Stretch" IsVisible="{Binding WindowVM.PanelPlusIsVisible}" Fill="{DynamicResource PanelDivider}"></Rectangle>
-                                    <Button VerticalAlignment="Center" Classes="btn" Width="30" Height="30" Margin="6 0 0 0" Command="{Binding WindowVM.ShowTaskOverlay}" IsVisible="{Binding WindowVM.PanelPlusIsVisible}">
+                                    <TextBlock Classes="t-m t-20" VerticalAlignment="Center" Text="{Binding ViewRepository.Panel.Text}"></TextBlock>
+                                    <Rectangle Width="1" VerticalAlignment="Stretch" IsVisible="{Binding ViewRepository.Panel.PlusIsVisible}" Fill="{DynamicResource PanelDivider}"></Rectangle>
+                                    <Button VerticalAlignment="Center" Classes="btn" Width="30" Height="30" Margin="6 0 0 0" Command="{Binding WindowVM.ShowTaskOverlay}" IsVisible="{Binding ViewRepository.Panel.PlusIsVisible}">
                                        <PathIcon Height="14" Width="14" Data="{StaticResource PlusIcon}" Foreground="{DynamicResource Text}"></PathIcon> 
                                     </Button>
                                 </StackPanel>
@@ -175,7 +176,7 @@
                                                 <TextBlock Grid.Column="2" VerticalAlignment="Center" Classes="t-16 second" Text="{Binding CompleteDate, Converter={StaticResource DateTimeToDateConverter}}"></TextBlock>
                                                 <TextBlock Grid.Column="3" VerticalAlignment="Center" Classes="t-16 second" Margin="6 0">/</TextBlock>
                                                 <TextBlock Grid.Column="4" VerticalAlignment="Center" Classes="t-16 second" Margin="0 0 16 0" Text="{Binding CompleteDate, Converter={StaticResource DateTimeToTimeConverter}}"></TextBlock>
-                                                <Button Grid.Column="5" Width="24" Height="24" Classes="taskBtn">
+                                                <Button Grid.Column="5" Width="24" Height="24" Classes="taskBtn" Command="{Binding DataContext.WindowVM.EditTask, ElementName=MainWindowLayout}" CommandParameter="{Binding}">
                                                     <PathIcon Width="20" Height="20" Data="{StaticResource EditIcon}" Foreground="{DynamicResource TaskSecondaryText}"></PathIcon>
                                                 </Button>
                                                 <Button Grid.Column="6" Width="24" Height="24" Classes="taskBtn" Command="{Binding Path=DataContext.WindowVM.RemoveTask, ElementName=MainWindowLayout}" CommandParameter="{Binding }">
